<resources>
    <string name="app_name">RingierAd-demo</string>
    <string name="activity_scroll_view_title">Scroll view screen</string>
    <string name="activity_scroll_view_subtitle">Scroll down to see your ads</string>
    <string name="activity_scroll_view_article">ARTICLE</string>
    <string name="activity_scroll_view_article_title">What\'s the best way to learn receptive skills?</string>
    <string name="activity_scroll_view_article_text">We often think of speaking and writing as the most challenging of the four language skills but what about the receptive skills? With reading, learners have time to think, but listening in another language presents a very different set of challenges for the learner. How often have we heard learners complain ‘it’s too fast, teacher!’? So how can you help?</string>
    <string name="activity_scroll_view_article_subtitle">Insights into listening</string>
    <string name="activity_scroll_view_article_subtitle_1">How many words?</string>
    <string name="activity_scroll_view_article_text_1">This micro listening is a great activity to try towards the end of your listening lesson, when learners have already heard the recording, so they know the speakers’ voices and the topic. Select a short phrase, of around 10 words, from the listening you have just completed. Set up the audio so you are ready to press ‘Play’. Tell the learners to listen and count the number of words they hear. You will need to play the audio several times. Pairs discuss. Take a range of answers from the class, but don’t tell them the answer just yet. Write the phrase on the board and count the number of words with the class. Who was the closest? Now ask them to listen and read the phrase at the same time. This time they have to decide which words they hear most clearly, in other words, you want them to notice the stressed words. Ask why they think they heard these words most clearly. Explain that stressed words carry the key information. This micro listening activity helps raise learners’ awareness of sounds, helping them notice the stressed words and preparing them to listen for key information. In mixed-ability classes, put a few simple strategies in place so the whole class can listen to the same recording, and take part in the same activity. This means that no learner feels lost or left behind. Make the gap-fill or sentence-completion task more achievable and supply the first letter of the missing word. Alternatively supply the first and the final letter and indicate how many letters the missing word has. Provide an additional layer of support for weaker learners by giving them the audioscript. They can read the script as they listen and use it to help them find the correct answers.</string>
    <string name="activity_scroll_view_article_text_2">Tell the learners to listen and count the number of words they hear. You will need to play the audio several times. Pairs discuss. Take a range of answers from the class, but don’t tell them the answer just yet. </string>
</resources>