<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/asvScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/asvImageViewBackground"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_article_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/asvTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/activity_scroll_view_title"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/asvTextViewSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/asvImageViewBackground"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/asvTextViewSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/activity_scroll_view_subtitle"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/asvImageViewBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewTitle" />

            <TextView
                android:id="@+id/asvTextViewArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:background="@color/logger_overlay_blue"
                android:fontFamily="sans-serif"
                android:padding="4dp"
                android:text="@string/activity_scroll_view_article"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvImageViewBackground" />

            <TextView
                android:id="@+id/asvTextViewTitleArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/activity_scroll_view_article_title"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewArticle" />

            <TextView
                android:id="@+id/asvTextViewSubTitleArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/activity_scroll_view_article_subtitle"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewTitleArticle" />

            <TextView
                android:id="@+id/asvTextViewTextArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4dp"
                android:text="@string/activity_scroll_view_article_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewSubTitleArticle" />

            <TextView
                android:id="@+id/asvTextViewSubTitleArticle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/activity_scroll_view_article_subtitle_1"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewTextArticle" />

            <TextView
                android:id="@+id/asvTextViewTextArticle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4dp"
                android:text="@string/activity_scroll_view_article_text_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewSubTitleArticle1" />

            <ch.iagentur.ringieradsdk.external.ad.BannerAdView
                android:id="@+id/asvOneAdView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewTextArticle1"
                tools:background="@color/gray"
                tools:layout_height="100dp" />

            <TextView
                android:id="@+id/asvTextViewTextArticle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4dp"
                android:text="@string/activity_scroll_view_article_text_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvOneAdView" />


            <ch.iagentur.ringieradsdk.external.ad.BannerAdView
                android:id="@+id/asvTwoAdView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTextViewTextArticle2"
                tools:background="@color/black"
                tools:layout_height="100dp" />

            <TextView
                android:id="@+id/asvTextViewTextArticle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4dp"
                android:text="@string/activity_scroll_view_article_text_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/asvTwoAdView" />

            <ImageView
                android:id="@+id/asvOneButtonInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:elevation="1dp"
                android:src="@drawable/ic_baseline_help_24"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/asvOneAdView" />

            <ImageView
                android:id="@+id/asvTwoButtonInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:elevation="1dp"
                android:src="@drawable/ic_baseline_help_24"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/asvTwoAdView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>